--- a/Group_1_Predicting_RTC_Severity/Jawairia/Group1-Predicting RTC Severity.ipynb
+++ b/Group_1_Predicting_RTC_Severity/Jawairia/Group1-Predicting RTC Severity.ipynb
@@ -2702,7 +2702,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.10.4 ('omdenaRTC')",
    "language": "python",
    "name": "python3"
   },
@@ -2716,11 +2716,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "3165825ed7053c8e1afa96bce8518cd8bc26e25fcb10caf600515faea5597791"
+    "hash": "43035cf4feb0c7ca2a9c447832e900c0595a82fff3512166f658a1a28ee9840c"
    }
   }
  },
