Update and added Files
Updated Predicting_RTC_Severity.ipynb
Added Group_2_GeoSpatial_Heatmap\Geospatial_Demo.ipynb
Added Group_2_GeoSpatial_Heatmap\Heat map notebook.html
Added Group_2_GeoSpatial_Heatmap\image.png
Added Group_2_GeoSpatial_Heatmap\Liverpool Group 2.pdf
Added Group_2_GeoSpatial_Heatmap\map_test.html
Added nb_advanced_eda.ipynb

--- a/snips.ipynb
+++ b/snips.ipynb
@@ -437,6 +437,124 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "df_accident.isnull().sum().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_accident['junction_control'].value_counts(dropna=False, ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_accident['junction_control'] = df_accident['junction_control'].replace(to_replace='Data missing or out of range',\n",
+    "                                        value='Not at junction or within 20 metres'\n",
+    "                                      )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_accident['junction_control'].value_counts(dropna=False, ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(15,15))\n",
+    "ax = sns.histplot(data=df_accident, x='junction_control', bins=5, hue='accident_severity')\n",
+    "\n",
+    "ax.set_xticklabels(ax.get_xticklabels(),\n",
+    "                   rotation=20,\n",
+    "                   horizontalalignment='right'\n",
+    "                   )\n",
+    "None\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_accident['junction_control'] = np.where(\n",
+    "    ((df_accident['junction_control'] == 'Not at junction or within 20 metres')\n",
+    "     & (df_accident['junction_detail'] == 'Private drive or entrance')), 5, 0\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_accident['junction_control'] = np.where(\n",
+    "    ((\n",
+    "      df_accident['junction_control'] == 'Not at junction or within 20 metres'\n",
+    "      )\n",
+    "      & (\n",
+    "      df_accident['junction_detail'] == 'Private drive or entrance'\n",
+    "      )), 5, 0\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_accident.loc[(df_accident['junction_control'] == 'Not at junction or within 20 metres') & (df_accident['junction_detail'] == 'Private drive or entrance')].sample(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_accident['junction_control'] = df_accident['junction_control'].replace(to_replace='Data missing or out of range',\n",
+    "                                        value='Not at junction or within 20 metres'\n",
+    "                                      )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
