--- a/snips.ipynb
+++ b/snips.ipynb
@@ -538,10 +538,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\kmedr\\My Drive\\Omdena_Predicting_RTC_main\\snips.ipynb Cell 19\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/kmedr/My%20Drive/Omdena_Predicting_RTC_main/snips.ipynb#X24sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m values \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([\u001b[39m2\u001b[39m,\u001b[39m5\u001b[39m,\u001b[39m3\u001b[39m,\u001b[39m6\u001b[39m,\u001b[39m4\u001b[39m,\u001b[39m7\u001b[39m,\u001b[39m1\u001b[39m])   \n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/kmedr/My%20Drive/Omdena_Predicting_RTC_main/snips.ipynb#X24sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m idx \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(\u001b[39mlist\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mabcdefg\u001b[39m\u001b[39m'\u001b[39m)) \n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/kmedr/My%20Drive/Omdena_Predicting_RTC_main/snips.ipynb#X24sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m clrs \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mb\u001b[39m\u001b[39m'\u001b[39m \u001b[39mif\u001b[39;00m (x \u001b[39m<\u001b[39m \u001b[39mmax\u001b[39m(values)) \u001b[39melse\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m values ]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "values = np.array([2,5,3,6,4,7,1])   \n",
+    "idx = np.array(list('abcdefg')) \n",
+    "clrs = ['b' if (x < max(values)) else 'r' for x in values ]\n",
+    "sns.barplot(x=idx, y=values, palette=clrs)"
+   ]
   },
   {
    "cell_type": "code",
@@ -579,7 +596,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.12"
   },
   "orig_nbformat": 4,
