--- a/snips.ipynb
+++ b/snips.ipynb
@@ -561,25 +561,86 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Observations Summary - **'junction_control'**\n",
+    "Here we can see that **Slight** RTC's are more inclined to happen at a **Give way or uncontrolled** junction, **Fatal** RTC's are less inclined.  \n",
+    "  \n",
+    "**Serious** RTC's are more inclined to happen at a **Not at junction or within 20 metres** closely followed by **Give way or uncontrolled**.  \n",
+    "  \n",
+    "It is worth noting that all RTC's are more prevalent at **Give way or uncontrolled** junctions, than any other junction type.  \n",
+    "  \n",
+    "**Fatal** RTC's are more inclined to happen away from a junction."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_accident.month = pd.Categorical(values=df_accident.month,\n",
+    "                                    categories=['Jan', 'Feb', 'Mar', 'Apr',\n",
+    "                                                'May', 'Jun', 'Jul',\n",
+    "                                                'Aug', 'Sep', 'Oct',\n",
+    "                                                'Nov', 'Dec'\n",
+    "                                                ]\n",
+    "                                    ) # Set the order for the columns\n",
+    "df_accident.sort_values(['month']) # Sort the column\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "datav = pd.read_csv('Mapping/volcanoes.txt')\n",
+    "lat = list(datav['LAT'])\n",
+    "lon = list(datav['LON'])\n",
+    "nam = list(datav['NAME'])\n",
+    "stat = list(datav['STATUS'])\n",
+    "\n",
+    "def color_producer(status):\n",
+    "    if 'Radiocarbon' in status:\n",
+    "        return 'red'\n",
+    "    elif 'Tephrochronology' in status:\n",
+    "        return 'darkpurple'\n",
+    "    elif 'Historical' in status:\n",
+    "        return 'orange'\n",
+    "    elif 'Dendrochronology' in status:\n",
+    "        return 'lightblue'\n",
+    "    elif 'Varve Count' in status:\n",
+    "        return 'white'\n",
+    "    elif 'Holocene?' in status:\n",
+    "        return 'lightgreen'\n",
+    "    elif 'Fumarolic' in status:\n",
+    "        return 'beige'\n",
+    "    elif 'Anthropology' in status:\n",
+    "        return 'black'\n",
+    "    elif 'Pleistocene-Fumarolic' in status:\n",
+    "        return 'green'\n",
+    "    elif 'Holocene' in status:\n",
+    "        return 'purple'\n",
+    "    else:\n",
+    "        return 'blue'\n",
+    "\n",
+    "html = '''<h4>Volcano Information</h4>\n",
+    "<b>Name: </b> %s <br />\n",
+    "<b>Status: </b> %s\n",
+    "'''\n",
+    "map2 = flm.Map(location=[39.164, -98.701], zoom_start=5,)\n",
+    "\n",
+    "fg = flm.FeatureGroup(name='My V Map')\n",
+    "\n",
+    "for lt, ln, nm, st in zip((lat), (lon), (nam), (stat)):\n",
+    "    iframe = flm.IFrame(html = html % ((nm), (st)), height = 100)\n",
+    "    popup = flm.Popup(iframe, min_width=200, max_width=500)\n",
+    "    fg.add_child(flm.CircleMarker(location = [lt, ln], popup = (popup), fill_color=color_producer(st), color = 'grey', fill_opacity = 0.7))\n",
+    "    map2.add_child(fg)\n",
+    "map2"
+   ]
   },
   {
    "cell_type": "code",
