--- a/snips.ipynb
+++ b/snips.ipynb
@@ -647,7 +647,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "map = flm.Map(location=[55.466, -3.691], zoom_start=6,)"
+   ]
   }
  ],
  "metadata": {
