--- a/snips.ipynb
+++ b/snips.ipynb
@@ -650,6 +650,100 @@
    "source": [
     "map = flm.Map(location=[55.466, -3.691], zoom_start=6,)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('1st_Road_Class''\\n', f\"Unique Values: {df_accident['1st_Road_Class'].nunique()}, \\n{df_accident['1st_Road_Class'].unique()}\", '\\n')\n",
+    "print('2nd_Road_Class''\\n', f\"Unique Values: {df_accident['2nd_Road_Class'].nunique()}, \\n{df_accident['2nd_Road_Class'].unique()}\", '\\n')\n",
+    "print('LSOA_of_Accident_Location''\\n', f\"Unique Values: {df_accident['LSOA_of_Accident_Location'].nunique()}, \\n{df_accident['LSOA_of_Accident_Location'].unique()}\")\n",
+    "print('Weather_Conditions''\\n', f\"Unique Values: {df_accident['Weather_Conditions'].nunique()}, \\n{df_accident['Weather_Conditions'].unique()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will change `Weather_Conditions` with `Unknown`.  \n",
+    "We can leave `LSOA_of_Accident_Location` as this column has no real value to the **EDA** and will be dropped.\n",
+    "  \n",
+    "Lets remove columns that are not required for **EDA**.  \n",
+    "`The 1st_Road_Number`, `2nd_Road_Number` and `LSOA_of_Accident_Location` are not required for the **EDA**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Road_Surface_Conditions''\\n', f\"Unique Values: {df_accident['Road_Surface_Conditions'].nunique()}, \\n{df_accident['Road_Surface_Conditions'].unique()}\", '\\n')\n",
+    "print('Road_Type''\\n', f\"Unique Values: {df_accident['Road_Type'].nunique()}, \\n{df_accident['Road_Type'].unique()}\", '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(df_accident['local_authority_district'] == 'York')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(df_accident[(df_accident['local_authority_district'] == 'Aberdeen City')])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_accident.loc[df_accident['Road_Surface_Conditions'] == 'Dry', 'Weather_Conditions'] = 'Fine no high winds'\n",
+    "# df_accident.loc[df_accident['Road_Surface_Conditions'] == 'Wet or damp', 'Weather_Conditions'] = 'Raining no high winds'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yr = df_accident[(df_accident['year'] == 2005) & (df_accident['accident_severity'] == 'Slight') & (df_accident['local_authority_district'] == 'Kensington and Chelsea')]\n",
+    "len(yr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_accident['local_authority_district'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
